@@ -1,0 +1,26 @@
+MIME-Version: 1.0
+Content-Type: text/plain; charset="us-ascii"
+Content-Transfer-Encoding: 7bit
+To: =?utf-8?Q?B=C3=A4rengraben?=
+ <to@example.org>
+From: =?utf-8?Q?B=C3=A4rengraben?=
+ =?utf-8?Q?B=C3=A4rengraben?=
+ <from@example.org>
+Subject: Lorem Ipsum
+Date: Thu, 01 Jan 1970 01:00:00 +0100
+Message-Id: <1>
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+quis nostrud exerci tation ullamcorper suscipit lobortis
+nisl ut aliquip ex ea commodo consequat.
+
+Duis autem vel eum iriure dolor in hendrerit in vulputate 
+velit esse molestie consequat, vel illum dolore eu feugiat
+nulla facilisis at vero eros et accumsan et iusto odio
+dignissim qui blandit praesent luptatum zzril delenit augue
+duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit 
+amet, consectetuer adipiscing elit, sed diam nonummy nibh
+euismod tincidunt ut laoreet dolore magna aliquam erat 
+volutpat.
